[package]
name = "peer_review_by_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6"
chrono = "0.4"
anthropic = "0.0.8"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
